--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -52,6 +52,8 @@
 @media screen and (max-width:600px){
     .container.testimonials_container{
         width: var(--container-width-sm);
+        display: "flex";
+        flex-direction: "column";
     }
 
     .client_review{
